@@ -3,55 +3,44 @@ package com.programmerdan.minecraft.simpleadminhacks.hacks.basic;
 import com.programmerdan.minecraft.simpleadminhacks.SimpleAdminHacks;
 import com.programmerdan.minecraft.simpleadminhacks.framework.BasicHack;
 import com.programmerdan.minecraft.simpleadminhacks.framework.BasicHackConfig;
+import java.util.List;
 import net.kyori.adventure.text.Component;
 import org.bukkit.Material;
-import org.bukkit.event.EventHandler;
-import org.bukkit.event.EventPriority;
-import org.bukkit.event.inventory.InventoryOpenEvent;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
-import vg.civcraft.mc.civmodcore.chat.ChatUtils;
-import java.util.Collections;
-import java.util.List;
+import org.jetbrains.annotations.NotNull;
+import vg.civcraft.mc.civmodcore.inventory.items.updater.listeners.UpdateInventoryItemsOnOpen;
 
-public class ItemMetaConverterHack extends BasicHack {
-
+public class ItemMetaConverterHack extends BasicHack implements UpdateInventoryItemsOnOpen {
     private static final ItemStack BAD_CRATE;
-    private static final ItemStack GOOD_CRATE;
+    private static final ItemMeta GOOD_CRATE;
 
     static {
-        BAD_CRATE = new ItemStack(Material.CHEST);
-        ItemMeta badCrateMeta = BAD_CRATE.getItemMeta();
-        badCrateMeta.lore(Collections.singletonList(Component.empty().append(Component.text("Crate"))));
-        BAD_CRATE.setItemMeta(badCrateMeta);
+        BAD_CRATE = new ItemStack(Material.CHEST); {
+            final ItemMeta meta = BAD_CRATE.getItemMeta();
+            meta.lore(List.of(Component.empty().append(Component.text("Crate"))));
+            BAD_CRATE.setItemMeta(meta);
+        }
 
-        GOOD_CRATE = new ItemStack(Material.CHEST);
-        ItemMeta goodCrateMeta = BAD_CRATE.getItemMeta();
-        goodCrateMeta.lore(Collections.singletonList(Component.text("Crate")));
-        GOOD_CRATE.setItemMeta(goodCrateMeta);
+        GOOD_CRATE = BAD_CRATE.getItemMeta();
+        GOOD_CRATE.lore(List.of(Component.text("Crate")));
     }
 
-    public ItemMetaConverterHack(final SimpleAdminHacks plugin, final BasicHackConfig config) {
+    public ItemMetaConverterHack(
+        final @NotNull SimpleAdminHacks plugin,
+        final @NotNull BasicHackConfig config
+    ) {
         super(plugin, config);
     }
 
-    @EventHandler(priority = EventPriority.LOWEST, ignoreCancelled = true)
-    public void convertOnInventoryOpen(final InventoryOpenEvent event) {
-        final var inventory = event.getInventory();
-        if (inventory.getHolder() == null) {
-            return; // GUI
-        }
-        for (final ItemStack item : inventory.getStorageContents()) {
-            processItem(item);
-        }
-    }
-
-    public static void processItem(final ItemStack item) {
-        if (item == null) {
-            return;
-        }
+    @Override
+    public boolean updateItem(
+        final @NotNull ItemStack item
+    ) {
         if (item.isSimilar(BAD_CRATE)) {
-            item.setItemMeta(GOOD_CRATE.getItemMeta());
+            item.setItemMeta(GOOD_CRATE);
+            return true;
         }
+        return false;
     }
 }
